[tool.poetry]
name = "nonebot-plugin-mystere-patch"
version = "1.0.0-alpha01"
description = "Patch plugin for NoneBot2 mystere support."
packages = [{ include = 'nonebot_plugin_mystere_patch' }]
authors = ["Madray Haven <sgpublic2002@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/OpenMystere/nonebot-plugin-mystere-patch"

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0"
nonebot-adapter-onebot = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
