[tool.poetry]
name = "nonebot-plugin-mystere-patch"
version = "1.0.0-alpha04"
description = "Patch plugin for NoneBot2 mystere support."
packages = [{ include = 'nonebot_plugin_mystere_patch' }]
authors = ["Madray Haven <sgpublic2002@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/OpenMystere/nonebot-plugin-mystere-patch"

[tool.poetry.dependencies]
python = "^3.9"
nonebot-plugin-guild-patch = "^0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
